# nanalive-link-receiver

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: compositor_contract.rs  frame_matcher.rs  lib.rs  main.rs  pairing.rs  receiver.rs
src/windows/: mod.rs  pipeline.rs  tray.rs
