[package]
name = "nanalive-link-receiver"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Windows NanaLive Link receiver with D3D11 hardware decode and Spout output"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mutsuki-link = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "2ffca07", features = ["mdns", "pairing", "quic"] }
nanalive-link-protocol = { git = "https://github.com/sena-nana/nanalive-link-protocol.git", rev = "2c3eccf05de42184500e9cb4d6daa70d3d19da26" }
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13.2"
ring = "0.17.14"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
mutsuki-link = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "2ffca07", features = ["system-keyring"] }
nanalive-spout = { git = "https://github.com/sena-nana/nanalive-spout.git", rev = "7f7dfe1", default-features = false, features = ["gpu-dx11-texture"] }
tray-icon = { version = "0.24.1", default-features = false, features = ["common-controls-v6"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
